test/elaboration/bad/typeclass_instance_bad_member_name.mle
class H 'a { x : 'a }
instance H int { y = 42 }